--- a/views/userViews/landingPage.hbs
+++ b/views/userViews/landingPage.hbs
@@ -821,95 +821,13 @@
 
         <div class="slider slider-v1" data-cycle-swipe="true" data-cycle-prev=".prevControl"
           data-cycle-next=".nextControl" data-cycle-loader="wait">
+          {{#each bannerData}}
           <div class="slider-item slider-item-img1">
-            <img src="images/slider/slider0.jpg" class="img-responsive parallaximg sliderImg" alt="img" />
+            <img src="/images/productImages/{{this.image}}" class="img-responsive parallaximg sliderImg" alt="img" />
           </div>
-          <div class="slider-item slider-item-img1">
-            <div class="sliderInfo">
-              <div class="container">
-                <div class="col-lg-12 col-md-12 col-sm-12 sliderTextFull">
-                  <div class="inner text-center">
-                    <div class="topAnima animated">
-                      <h1 class="uppercase xlarge">GO ON BIG STYLE</h1>
-
-                      <h3 class="hidden-xs">Don't Miss</h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <img src="images/slider/slider1.jpg" class="img-responsive parallaximg sliderImg" alt="img" />
-          </div>
+          {{/each}}
           <!--/.slider-item-->
 
-          <div class="slider-item slider-item-img2">
-            <div class="sliderInfo">
-              <div class="container">
-                <div class="col-lg-12 col-md-12 col-sm-12 sliderTextFull">
-                  <div class="inner dark maxwidth500 text-center animated topAnima">
-                    <div class="">
-                      <h1 class="uppercase xlarge">CUSTOM HTML BLOCK</h1>
-
-                      <h3 class="hidden-xs">Custom Slides to Your Slider</h3>
-                    </div>
-                    <a class="btn btn-danger btn-lg">SHOP NOW ON TSHOP
-                      <span class="arrowUnicode">►</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <img src="images/slider/slider3.jpg" class="img-responsive parallaximg sliderImg" alt="img" />
-          </div>
-          <!--/.slider-item-->
-
-          <div class="slider-item slider-item-img3">
-            <div class="sliderInfo">
-              <div class="container">
-                <div class="col-lg-5 col-md-4 col-sm-6 col-xs-8 pull-left sliderText white hidden-xs">
-                  <div class="inner">
-                    <h1>TSHOP JEANS</h1>
-
-                    <h3 class="price">Free Shipping on ₹100</h3>
-
-                    <p class="hidden-xs">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing
-                      elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                      dolore magna aliquam erat volutpat.
-                    </p>
-                    <a href="category.html" class="btn btn-primary">SHOP NOW
-                      <span class="arrowUnicode">►</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <img src="images/slider/slider4.jpg" class="img-responsive parallaximg sliderImg" alt="img" />
-          </div>
-          <!--/.slider-item-->
-
-          <div class="slider-item slider-item-img3">
-            <div class="sliderInfo">
-              <div class="container">
-                <div class="col-lg-5 col-md-6 col-sm-5 col-xs-5 pull-left sliderText blankstyle transformRight">
-                  <div class="inner text-right">
-                    <img src="images/slider/color.png" class="img-responsive" alt="img" />
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-5 col-xs-7 pull-left sliderText blankstyle color-white">
-                  <div class="inner">
-                    <h1 class="uppercase topAnima animated">
-                      10+ Amazing Color Theme
-                    </h1>
-
-                    <p class="bot tomAnima animated opacity0 hidden-xs">
-                      Fully responsive bootstrap Ecommerce Template. Available
-                      in 10+ color schemes and easy to set.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <img src="images/slider/6.jpg" class="img-responsive parallaximg sliderImg" alt="img" />
-          </div>
         </div>
         <!--/.slider slider-v1-->
       </div>
