features/coupon/userSide/update3

--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -109,6 +109,9 @@
                             <input name="productStock" type="tel" class="form-control" placeholder="Product Stock"
                                 required>
                         </div>
+                        <div class="input-group mb-3">
+                            <input name="productStock" type="number" class="form-control" placeholder="Product Offer" required>
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -138,6 +141,7 @@
                     <th>Product Image3</th>
                     <th>Price in INR</th>
                     <th>In stock</th>
+                    <th>Product Offer</th>
                     <th>List/Unlist</th>
                     <th>Actions</th>
                 </tr>
