feature/productOfferManagement/adminSide

--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -44,6 +44,10 @@
                         <a class="nav-link" aria-current="page" href="/admin/couponManagement">Coupons</a>
                     </li>
                     <li class="nav-item fw-bold">
+                        <a class="nav-link" aria-current="page" href="/admin/productOfferManagement">Product
+                            Offers</a>
+                    </li>
+                    <li class="nav-item fw-bold">
                         <a class="nav-link" aria-current="page" href="/admin/salesReport">Sales Report</a>
                     </li>
                 </ul>
