--- a/views/userViews/checkoutPage.hbs
+++ b/views/userViews/checkoutPage.hbs
@@ -786,8 +786,7 @@
                               <select class="form-control" required aria-required="true" id="SelectAddress"
                                 name="chosenAddress">
                                 {{#each addressData}}
-                                <option value="{{this._id}}">
-                                  {{this.addressTitle}}</option>
+                                <option value="{{this._id}}"> {{this.addressTitle}}</option>
                                 {{/each}}
                               </select>
                               <br>
