--- a/views/userViews/productDetails.hbs
+++ b/views/userViews/productDetails.hbs
@@ -753,9 +753,9 @@
                 </button>
               </div>
             </form>
-            <div id="wishlist" class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            {{!-- <div id="wishlist" class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
               <a class="link-wishlist wishlist btn-block ">Add to Wishlist</a>
-            </div>
+            </div> --}}
           </div>
           <div style="clear:both"></div>
           <h3 class="incaps"><i class="fa fa fa-check-circle-o color-in"></i> In stock</h3>
