--- a/views/userViews/landingPage.hbs
+++ b/views/userViews/landingPage.hbs
@@ -890,9 +890,9 @@
             <div class="image">
               <a href="/productDetails/{{this._id}}"><img src="images/productImages/{{this.productImage1}}" alt="img"
                   class="img-responsive" /></a>
-              {{#if this.productOffer}}
+              {{#if this.productOfferId}}
               <div class="promotion">
-                <span class="discount">{{this.productOffer}}% OFF</span>
+                <span class="discount">{{this.productOfferPercentage}}% OFF</span>
               </div>
               {{/if}}
             </div>
